Added .gitignore to ignore .DS_Store files

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h2>Галерея</h2>
             <div class="photo-grid">
                 <div class="photo">
-                    <img src="Без названия.jpeg" alt="Foto-1">
+                    <img src="image.jpeg" alt="Foto-1">
                     
                 </div>
                 <div class="photo">
